# bevy-game

./: Cargo.toml  README.md  index.html
.github/workflows/: static.yml
src/: main.rs
src/components/: entities.rs  mod.rs  objects.rs  vitals.rs
src/network/: core.rs  mod.rs  native.rs  resource.rs  synchronizer.rs  wasm.rs
src/plugins/: map.rs  menu.rs  mod.rs
src/plugins/network/: mod.rs  native.rs  resource.rs  synchronizer.rs  wasm.rs
src/plugins/player/: animation.rs  bundle.rs  camera.rs  mod.rs
wasm/: bavytest.d.ts  bavytest.js  bavytest_bg.wasm.d.ts
